tests/normal_bad.svx
; pos=fail warn=0 error=3
*fix 1 0 0 0
1 1a 2.13 012 0
1 2 - 000 0
2 3 1.00 - 0
2 * 1.00 000 0
